less/components/ui_elements/navbar.less
/*basic nav bar structure*/
nav{
	box-shadow: -6px 5px 7px 0px @shadow-black;
	min-width:@nav-full-width;
	min-height:@nav-min-height;
	&.fixed-nav{
		position: fixed;
		top: 0;
	}
	&.light{
		background-color:@onyx-white;
		color:@onyx-black;
	}
	&.dark{
		background-color:@onyx-black;
		color:@onyx-white;
	}
	&.transparent{
		background-color: transparent;
		box-shadow: none;
	}
	.nav-logo{
		position: absolute;
		top:@nav-logo-pad/2;
		bottom:@nav-logo-pad/2;
		left:@base-padding;
		.logo-img{
			width:@nav-logo-width;
			height:@nav-logo-height;
			@media only screen and (max-width:@mobile-width) {
				width:@nav-logo-width - 10;
				height:@nav-logo-height - 10;
			}
		}
	}
	.nav-menu{
		list-style-type: none;
		margin: 0;
		float: right;
		clear: both;
		li{
			display: inline-block;
			line-height: @nav-min-height;
			margin: 0 @nav-li-margin;
			font-size: @nav-li-font-size;
			font-weight: bold;
			@media only screen and (max-width: @tablet-max-width)  {
				width: 100%;
			}
		}
		@media only screen and (max-width: @tablet-max-width)  {
			display: none;
			position: relative;
			width: 100%;
			text-align: center;
			color: inherit;
			background-color: inherit;
		}
	}
	a{
		&:link,&:visited,&:hover,&:active{
			text-decoration: none;
			color:inherit;
			font-size: inherit;
		}
	}
	.nav-toggler{
		display:none;
		position: relative;
		height: @nav-btn-dimension;
		width: @nav-btn-dimension;
		border: 2px solid @onyx-black;
		border-radius: @nav-logo-pad;
		text-align: center;
		float:right;
		clear:both;
		cursor:pointer;
		margin: @nav-logo-pad*4 @nav-li-margin;
		@media only screen and (max-width: @tablet-max-width)  {
			display: inline-block;
		}
		span{
			background-color: @onyx-black;
			height: @ham-height;
			width: @ham-width;
			position: absolute;
			left:@col-min-height;
			right:@col-min-height;
			&:first-of-type{
				top: @nav-logo-pad*2;
			}
			&:nth-child(2){
				top: @nav-logo-pad * 3;
			}
			&:last-of-type{
				top: @nav-logo-pad*4;
			}
		}
	}
}

